--- a/SportsCards/SportsCards/Base.lproj/Main.storyboard
+++ b/SportsCards/SportsCards/Base.lproj/Main.storyboard
@@ -4,6 +4,15 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="LeagueGothic-Regular.otf">
+            <string>LeagueGothic-Regular</string>
+            <string>LeagueGothic-Regular</string>
+            <string>LeagueGothic-Regular</string>
+            <string>LeagueGothic-Regular</string>
+            <string>LeagueGothic-Regular</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--Athlete List-->
         <scene sceneID="kwV-7l-2aM">
@@ -338,7 +347,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Generate" id="5wm-cJ-cxg">
                             <connections>
-                                <segue destination="Qgk-Bq-T52" kind="presentation" id="Dj6-an-qNp"/>
+                                <segue destination="Qgk-Bq-T52" kind="presentation" identifier="createSegue" modalTransitionStyle="flipHorizontal" id="Dj6-an-qNp"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -368,12 +377,102 @@
                     <view key="view" contentMode="scaleToFill" id="fo0-ZK-CKQ">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IaT-L0-LQC">
+                                <rect key="frame" x="0.0" y="438" width="600" height="67"/>
+                                <color key="backgroundColor" red="0.94901960784313721" green="0.30196078431372547" blue="0.16078431372549021" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="67" id="i2x-j3-BCr"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="picture" translatesAutoresizingMaskIntoConstraints="NO" id="ySL-QN-d8s">
+                                <rect key="frame" x="0.0" y="104" width="600" height="334"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="99" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ize-nF-9Ss">
+                                <rect key="frame" x="486" y="340" width="83" height="104.5"/>
+                                <fontDescription key="fontDescription" name="LeagueGothic-Regular" family="League Gothic" pointSize="121"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Inj-rh-VyE">
+                                <rect key="frame" x="36" y="525" width="528" height="60"/>
+                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </string>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="LeagueGothic-Regular" family="League Gothic" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Athlete Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uHq-h9-Z35">
+                                <rect key="frame" x="26" y="380" width="271" height="58"/>
+                                <fontDescription key="fontDescription" name="LeagueGothic-Regular" family="League Gothic" pointSize="73"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Athlete's Team Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="etn-LA-kMR">
+                                <rect key="frame" x="310" y="25" width="259" height="54"/>
+                                <fontDescription key="fontDescription" name="LeagueGothic-Regular" family="League Gothic" pointSize="45"/>
+                                <color key="textColor" red="0.16078431372549021" green="0.30588235294117649" blue="0.34901960784313724" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OF, 3B" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s5Y-k1-e2c">
+                                <rect key="frame" x="26" y="36.5" width="51.5" height="37.5"/>
+                                <fontDescription key="fontDescription" name="LeagueGothic-Regular" family="League Gothic" pointSize="31"/>
+                                <color key="textColor" red="0.16078431372549021" green="0.30588235294117649" blue="0.34901960784313724" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.94509803921568625" green="0.90588235294117647" blue="0.75294117647058822" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="VZq-B5-aiG" firstAttribute="top" secondItem="Inj-rh-VyE" secondAttribute="bottom" constant="30.5" id="0dR-01-vQM"/>
+                            <constraint firstAttribute="width" secondItem="IaT-L0-LQC" secondAttribute="width" id="2ni-wP-Yxc"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Inj-rh-VyE" secondAttribute="trailing" constant="20" id="6s6-XE-Sgr"/>
+                            <constraint firstItem="uHq-h9-Z35" firstAttribute="leading" secondItem="fo0-ZK-CKQ" secondAttribute="leadingMargin" constant="10" id="A3d-FY-RTm"/>
+                            <constraint firstItem="VZq-B5-aiG" firstAttribute="top" secondItem="ySL-QN-d8s" secondAttribute="bottom" constant="162" id="D2e-RW-dhX"/>
+                            <constraint firstItem="uHq-h9-Z35" firstAttribute="leading" secondItem="s5Y-k1-e2c" secondAttribute="leading" id="GuG-Ry-YZ4"/>
+                            <constraint firstItem="Ize-nF-9Ss" firstAttribute="trailing" secondItem="fo0-ZK-CKQ" secondAttribute="trailingMargin" constant="15" id="IF2-cc-XFp"/>
+                            <constraint firstItem="Inj-rh-VyE" firstAttribute="top" secondItem="Ize-nF-9Ss" secondAttribute="bottom" id="ITc-gB-OnX"/>
+                            <constraint firstAttribute="centerX" secondItem="IaT-L0-LQC" secondAttribute="centerX" id="KCc-q6-rUV"/>
+                            <constraint firstItem="Ize-nF-9Ss" firstAttribute="trailing" secondItem="etn-LA-kMR" secondAttribute="trailing" id="LVm-Bz-bGw"/>
+                            <constraint firstItem="etn-LA-kMR" firstAttribute="trailing" secondItem="fo0-ZK-CKQ" secondAttribute="trailingMargin" constant="-15" id="MIz-cu-oZc"/>
+                            <constraint firstItem="s5Y-k1-e2c" firstAttribute="leading" secondItem="fo0-ZK-CKQ" secondAttribute="leadingMargin" constant="10" id="Mst-n3-A0J"/>
+                            <constraint firstItem="ySL-QN-d8s" firstAttribute="top" secondItem="QrY-D4-xyv" secondAttribute="bottom" constant="104" id="NL2-Wz-F39"/>
+                            <constraint firstItem="s5Y-k1-e2c" firstAttribute="bottom" secondItem="etn-LA-kMR" secondAttribute="bottom" constant="-5" id="O7k-ZO-qfE"/>
+                            <constraint firstItem="ySL-QN-d8s" firstAttribute="bottom" secondItem="IaT-L0-LQC" secondAttribute="top" id="ODe-V5-a1x"/>
+                            <constraint firstItem="uHq-h9-Z35" firstAttribute="bottom" secondItem="Ize-nF-9Ss" secondAttribute="bottom" constant="-14" id="Pbm-S4-Xgh"/>
+                            <constraint firstItem="VZq-B5-aiG" firstAttribute="top" secondItem="Ize-nF-9Ss" secondAttribute="bottom" constant="66" id="QMR-CO-fX1"/>
+                            <constraint firstItem="Ize-nF-9Ss" firstAttribute="bottom" secondItem="IaT-L0-LQC" secondAttribute="top" constant="25" id="W0Q-6e-zj0"/>
+                            <constraint firstItem="Inj-rh-VyE" firstAttribute="leading" secondItem="fo0-ZK-CKQ" secondAttribute="leadingMargin" constant="20" id="XO1-pV-CCG"/>
+                            <constraint firstItem="uHq-h9-Z35" firstAttribute="centerY" secondItem="etn-LA-kMR" secondAttribute="centerY" constant="455" id="fii-Bf-yVe"/>
+                            <constraint firstAttribute="centerX" secondItem="ySL-QN-d8s" secondAttribute="centerX" id="iUG-cv-Eo7"/>
+                            <constraint firstItem="ySL-QN-d8s" firstAttribute="width" secondItem="fo0-ZK-CKQ" secondAttribute="width" id="k9H-TL-Ds5"/>
+                            <constraint firstItem="VZq-B5-aiG" firstAttribute="top" secondItem="Inj-rh-VyE" secondAttribute="bottom" constant="15" id="lmM-4V-bER"/>
+                            <constraint firstItem="Inj-rh-VyE" firstAttribute="top" secondItem="IaT-L0-LQC" secondAttribute="bottom" constant="20" id="mBY-wP-3E6"/>
+                            <constraint firstItem="uHq-h9-Z35" firstAttribute="bottom" secondItem="Ize-nF-9Ss" secondAttribute="bottom" id="qRA-NA-Whr"/>
+                            <constraint firstAttribute="centerX" secondItem="Inj-rh-VyE" secondAttribute="centerX" constant="12.5" id="r5o-yg-tPk"/>
+                            <constraint firstItem="etn-LA-kMR" firstAttribute="top" secondItem="QrY-D4-xyv" secondAttribute="bottom" constant="25" id="wVg-sQ-CkK"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="A3d-FY-RTm"/>
+                                <exclude reference="fii-Bf-yVe"/>
+                                <exclude reference="qRA-NA-Whr"/>
+                                <exclude reference="ITc-gB-OnX"/>
+                                <exclude reference="r5o-yg-tPk"/>
+                                <exclude reference="0dR-01-vQM"/>
+                                <exclude reference="QMR-CO-fX1"/>
+                                <exclude reference="IF2-cc-XFp"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <connections>
+                        <outlet property="displayName" destination="uHq-h9-Z35" id="39H-kc-45e"/>
+                        <outlet property="displayPhoto" destination="ySL-QN-d8s" id="bQ8-a9-Bir"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YRf-WN-Bfz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4147" y="1726"/>
+            <point key="canvasLocation" x="4147" y="1738"/>
         </scene>
         <!--Choose Statistics-->
         <scene sceneID="GT8-iV-lyy">
